<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="zhekou">%1$s折</string>
    <string name="app_name">优选购物</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xianshimiaosha">限时秒杀</string>
    <string name="xianjia">￥ %1$s</string>
    <string name="yuanjia">￥ %1$s</string>
    <string name="yuanjia2">原价:￥ %1$s</string>
    <string name="tiantiantejia">天天特价</string>
    <string name="zhekou2">（%1$s）折</string>
    <string name="about">超值！便捷！最时尚！

淘宝有海量宝贝在售，打折信息不好找？

想要第一时间团到心水的宝贝？

这里什么都有！美衣酷鞋化妆品...

上精品购物，天天都能淘到心水的宝贝！

精品购物，购到的都是精品。</string>

</resources>