<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/layout_line"
    android:orientation="vertical" >

    <com.loopj.android.image.SmartImageView
        android:id="@+id/imaview_list"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
       
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tx_now_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/xianjia"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tx_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/zhekou" />

        <TextView
            android:id="@+id/tx_origin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tx_now_price"
            android:layout_toRightOf="@+id/tx_now_price"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/yuanjia"
            android:textColor="#ffc8c8c8"
            android:textSize="11sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
       
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@null"
        android:textSize="12sp" />

</LinearLayout>