<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <com.loopj.android.image.SmartImageView
        android:id="@+id/imaview_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/imaview_list"
        android:layout_alignTop="@+id/imaview_list"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/imaview_list" >

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@null"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tx_now_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xianjia"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tx_origin_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuanjia2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tx_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhekou2"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>